examples/test/testpolicy18233.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18233
  namespace: namespace160
spec:
  podSelector:
    matchLabels:
      key33: value3
      key14: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value1
      podSelector:
        matchLabels:
          key24: value8
          key41: value34
